# ArduinoBearSSL

./: CMakeLists.txt  library.properties
src/: ArduinoBearSSL.cpp  ArduinoBearSSL.h  BearSSLClient.cpp  BearSSLClient.h  BearSSLTrustAnchors.h  SHA1.h
src/bearssl/: bearssl_ssl.h  bearssl_x509.h  ms_semphr.h  ssl_engine.c  ssl_hs_client.c  ssl_io.c
